--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@conform-to/react": "^1.1.4",
+    "@conform-to/zod": "^1.1.4",
+    "@hookform/resolvers": "^3.4.2",
     "gray-matter": "^4.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-toastify": "^10.0.5",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "resend": "^3.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
