--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "resend": "^3.2.0",
+    "sharp": "^0.33.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
